Fixes rankings header alignment

--- a/dataviva/static/css/modules/rankings.css
+++ b/dataviva/static/css/modules/rankings.css
@@ -140,10 +140,22 @@
 }
 .rankings .dataTables_scrollHeadInner .dataTable th {
     text-align: center;
+    vertical-align: middle;
 }
 .rankings .dataTables_scrollBody .dataTable td.table-number {
     text-align: right;
 }
 .rankings .navbar-nav > li > .dropdown-menu {
     margin-top: -6px;
+}
+
+
+.rankings table.dataTable thead .sorting:after,
+.rankings table.dataTable thead .sorting_asc:after,
+.rankings table.dataTable thead .sorting_desc:after,
+.rankings table.dataTable thead .sorting_asc_disabled:after,
+.rankings table.dataTable thead .sorting_desc_disabled:after {
+    top: 50%;
+    transform: translateY(-50%);
+    height: 25px;
 }
